@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
+	<defaultcontrol always="true">9001</defaultcontrol>
 	<onload>Skin.SetString(litebox_effect,blur)</onload>
 	<onload>Skin.SetString(litebox_quality,4)</onload>
 	<onload>Skin.SetString(litebox_blursize,5)</onload>
@@ -8,13 +9,151 @@
 	<onload condition="System.AddonIsEnabled(script.litebox) + Skin.HasSetting(BlurFanart)">RunScript(script.litebox,daemon=True)</onload>
 	<onload condition="System.AddonIsEnabled(script.litebox) + Skin.HasSetting(BlurFanart)">SetProperty(FIVE_daemon_set,$INFO[Skin.String(litebox_effect)],home)</onload>
 	<onload condition="System.AddonIsEnabled(script.litebox) + Skin.HasSetting(BlurFanart)">AlarmClock(nms1,SetProperty(NINE_manual_set,"var=main,set=$INFO[Skin.String(litebox_main)]|var=comp,set=$INFO[Skin.String(litebox_comp)]|var=quality,set=$INFO[Skin.String(litebox_quality)]|var=blursize,set=$INFO[Skin.String(litebox_blursize)]]",home),00:05,true)</onload>
-	<onload condition="Skin.HasSetting(ShowSplashScreen)">SetFocus(9001)</onload>
-	<onload>ReplaceWindow($INFO[System.StartupWindow])</onload>
 	<controls>
 		<control type="button" id="9001">
 			<left>2000</left>
-			<onfocus>PlayMedia(special://skin/resources/video/splash.mp4,noresume)</onfocus>
-			<visible>Skin.HasSetting(ShowSplashScreen)</visible>
+			<onfocus condition="Skin.HasSetting(ShowSplashScreen)">PlayMedia(special://skin/resources/video/splash.mp4,noresume)</onfocus>
+			<onfocus>ReplaceWindow($INFO[System.StartupWindow])</onfocus>
+			<animation effect="fade" start="0" end="100" time="0" delay="500" condition="!Skin.HasSetting(ShowSplashScreen)">Focus</animation>
+		</control>
+		<control type="image">
+			<description>Background Media</description>
+			<width>1280</width>
+			<height>720</height>
+			<texture background="true" fallback="backgrounds/media.png">$INFO[Skin.String(Background_Media)]</texture>
+			<animation effect="fade" start="100" end="60" time="200" condition="[!String.IsEmpty(ListItem.Art(fanart)) + !Skin.HasSetting(Back_Fanart)] | [Player.HasVideo + !Skin.HasSetting(Back_Video)] | [Player.HasAudio + !Skin.HasSetting(Back_Vis)]">Conditional</animation>
+		</control>
+		<control type="group">
+			<visible>!Skin.HasSetting(ShowSplashScreen)</visible>
+			<control type="group">
+				<top>-95</top>
+				<animation effect="fade" end="0">WindowOpen</animation>
+				<animation effect="fade" start="0" end="100" time="200">WindowClose</animation>
+				<control type="image">
+					<description>Background</description>
+					<left>141</left>
+					<width>68</width>
+					<height>910</height>
+					<texture>background-overlay-blackwash-left-ws.png</texture>
+				</control>
+				<control type="image">
+					<description>Background</description>
+					<left>105r</left>
+					<width>68</width>
+					<height>910</height>
+					<texture>background-overlay-blackwash-right-ws.png</texture>
+				</control>
+				<control type="image">
+					<description>Background</description>
+					<left>209</left>
+					<width>966</width>
+					<height>910</height>
+					<texture>background-overlay-blackwash-centertile-ws.png</texture>
+				</control>
+			</control>
+			<control type="group">
+				<visible>!Control.HasFocus(1) + !Control.HasFocus(2)</visible>
+				<!-- Left side -->
+				<control type="group">
+					<animation effect="fade" end="0">WindowOpen</animation>
+					<animation effect="slide" start="-100,0" end="0,0" time="100" delay="200">WindowClose</animation>
+					<control type="image">
+						<left>-110</left>
+						<top>-40</top>
+						<width>180</width>
+						<height>800</height>
+						<texture>blades-runner-left.png</texture>
+					</control>
+					<control type="image">
+						<top>-40</top>
+						<width>115</width>
+						<height>800</height>
+						<texture>blades-size2-left-NF.png</texture>
+					</control>
+					<control type="label">
+						<description>weather Label</description>
+						<label>31004</label>
+						<left>90</left>
+						<top>200</top>
+						<font>font16</font>
+						<textcolor>black</textcolor>
+						<aligny>top</aligny>
+						<angle>273</angle>
+					</control>
+				</control>
+				<control type="group">
+					<animation effect="fade" end="0">WindowOpen</animation>
+					<animation effect="slide" start="-100,0" end="0,0" time="100" delay="100">WindowClose</animation>
+					<control type="image">
+						<left>50</left>
+						<top>-40</top>
+						<width>115</width>
+						<height>800</height>
+						<texture>blades-size3-left-NF.png</texture>
+					</control>
+					<control type="label">
+						<description>Applications Label</description>
+						<label>31002</label>
+						<left>140</left>
+						<top>190</top>
+						<font>font16</font>
+						<textcolor>black</textcolor>
+						<aligny>top</aligny>
+						<angle>273</angle>
+					</control>
+				</control>
+				<control type="group">
+					<animation effect="fade" end="0">WindowOpen</animation>
+					<animation effect="slide" start="-100,0" end="0,0" time="100">WindowClose</animation>
+					<control type="image">
+						<left>100</left>
+						<top>-40</top>
+						<width>115</width>
+						<height>800</height>
+						<texture>blades-size4-header.png</texture>
+					</control>
+					<control type="label">
+						<description>Media Label</description>
+						<label>31001</label>
+						<left>188</left>
+						<top>170</top>
+						<font>font16</font>
+						<textcolor>black</textcolor>
+						<aligny>top</aligny>
+						<angle>273</angle>
+					</control>
+				</control>
+				<!-- Right side -->
+				<control type="group">
+					<animation effect="fade" end="0">WindowOpen</animation>
+					<animation effect="slide" start="100,0" end="0,0" time="100">WindowClose</animation>
+					<control type="image">
+						<left>65r</left>
+						<top>-40</top>
+						<width>180</width>
+						<height>800</height>
+						<texture>blades-runner-right.png</texture>
+					</control>
+					<control type="image">
+						<left>115r</left>
+						<top>-40</top>
+						<width>115</width>
+						<height>800</height>
+						<texture>blades-size3-right-NF.png</texture>
+					</control>
+					<control type="label">
+						<description>System Label</description>
+						<label>31003</label>
+						<left>48r</left>
+						<top>190</top>
+						<width>200</width>
+						<font>font16</font>
+						<textcolor>black</textcolor>
+						<aligny>top</aligny>
+						<angle>267</angle>
+					</control>
+				</control>
+			</control>
 		</control>
 	</controls>
 </window>
