@@ -1,3 +1,6 @@
+[B]Version 1.3.2[/B]
+- Add startup animation
+
 [B]Version 1.3.1[/B]
 - Add skin setting to blur fanart backgrounds
 
